[package]
name = "github_recent_releases"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["now", "clock", "std", "serde"] }
homedir = "0.3.4"
reqwest = { version = "0.12.9", features = ['json'] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1", features = ["full"] }
